<?xml version="1.0"?>
<package format="2">
  <name>ros_control_tests</name>
  <version>0.0.0</version>
  <description>The ros_control_tests package</description>

  <!-- One maintainer tag required, multiple allowed, one person per tag -->
  <!-- Example:  -->
  <!-- <maintainer email="jane.doe@example.com">Jane Doe</maintainer> -->
  <maintainer email="brschettini@todo.todo">brschettini</maintainer>


  <!-- One license tag required, multiple allowed, one license per tag -->
  <!-- Commonly used license strings: -->
  <!--   BSD, MIT, Boost Software License, GPLv2, GPLv3, LGPLv2.1, LGPLv3 -->
  <license>TODO</license>

  <buildtool_depend>catkin</buildtool_depend>
  <depend>hardware_interface</depend>
  <depend>controller_interface</depend>
  <depend>controller_manager</depend>
  <depend>default_robot_hw_base</depend>
  <depend>combined_robot_hw</depend>


  <!-- Other tools can request additional information be placed here -->
  <export>
    <hardware_interface plugin="${prefix}/robot_hw_plugins.xml"/>
  </export>
</package>
